# rules_pkg_810

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  go.mod  main.go  my.proto
