bazel_dep(name = "rules_go", repo_name = "io_bazel_rules_go", version = "0.42.0")
bazel_dep(name = "gazelle", repo_name = "bazel_gazelle", version = "0.33.0")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "rules_oci", version = "1.4.3")
bazel_dep(name = "aspect_bazel_lib", version = "2.0.3")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(
    name = "rules_proto",
    version = "5.3.0-21.7",
)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(version = "1.21.1")

# gazelle managed deps
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")

go_deps.from_file(go_mod = "//:go.mod")

# oci
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless_base",
    digest = "sha256:4f81adb2fa054fd2ea49a918e2eb025325992b1235733da5ba51ab75bf9bd386",
    image = "gcr.io/distroless/base",
)

# For each oci.pull call, repeat the "name" here to expose them as dependencies.
use_repo(oci, "distroless_base")
